--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,2 +1,18 @@
-<h1>Users#new</h1>
-<p>Find me in app/views/users/new.html.erb</p>
+<h1>This is a test form for adding Users with child Responses</h1>
+
+<%= form_for @user do |f| %>
+    <%= render 'shared/error_messages' %>
+
+    <%= f.label :username %>
+    <%= f.text_field :username %>
+
+    <%= f.label :email %>
+    <%= f.text_field :email %>
+    <p>
+    <%= f.fields_for :responses do |builder| %>
+          <%= builder.label :content, "Response" %>
+          <%= builder.text_field :content %>
+    <% end %>
+    </p>
+    <%= f.submit "Submit" %>
+<% end %>
