--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,9 +1,11 @@
 <h1><%= @user.username %>: <%= @user.email %></h1>
 
-<%= @responses.count %>
+<p><%= @responses.count %> responses</p>
 
+<ul>
 <%= @responses.each do |response| %>
-    response:
-    <%= @response.content %>
-
+    <li>
+    <%= response.content %>
+    </li>
 <% end %>
+</ul>
