Added bot_prompt and convo_id to responses and created conversation table

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,7 +3,7 @@
 <p><%= @responses.count %> responses</p>
 
 <ul>
-<%= @responses.each do |response| %>
+<% @responses.each do |response| %>
     <li>
     <%= response.content %>
     </li>
