--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,4 +1,4 @@
-<h1>This is a test form for adding Users with child Responses</h1>
+<h1>This is a test form for adding new Users with child Responses</h1>
 
 <%= form_for @user do |f| %>
     <%= render 'shared/error_messages' %>
