--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,8 +7,13 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+<%= image_tag 'matchbotlogo.png',id: 'logo' %>
 
 <%= yield %>
+
+<div class="footer">
+  <%= link_to "Back to Matchbot", root_path %> | <%= link_to "Contact us", contact_path %>
+</div>
 
 <%= debug(params) if Rails.env.development? %>
 
