--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,8 +12,9 @@
 <%= yield %>
 
 <div class="footer">
-  <%= link_to "Back to Matchbot", root_path %> | <%= link_to "Contact us", contact_path %>
+  <a href="about.html"> About </a> | <a href="contact.html"> Contact us </a> | <a href="matches.html"> Matches </a>
 </div>
+
 
 <%= debug(params) if Rails.env.development? %>
 
