--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -3,16 +3,11 @@
 <%= form_for @user do |f| %>
     <%= render 'shared/error_messages' %>
 
-    <%= f.label :username %>
-    <%= f.text_field :username %>
-
-    <%= f.label :email %>
-    <%= f.text_field :email %>
-    <p>
-    <%= f.fields_for :responses do |builder| %>
-          <%= builder.label :content %>
-          <%= builder.text_field :content %>
-    <% end %>
-    </p>
+    <%= f.hidden_field :email %>
+    <%= f.hidden_field :freqs %>
+    <%= f.hidden_field :nonstoplist_freqs %>
+    <%= f.hidden_field :avg_length %>
+    <%= f.hidden_field :total_words %>
+    
     <%= f.submit "Submit" %>
 <% end %>
