matchbot on ruby on rails

--- a/app/assets/stylesheets/stylesheet.css
+++ b/app/assets/stylesheets/stylesheet.css
@@ -1,26 +1,39 @@
 body {
 	text-align: center;
-	background-color: #8ab6c7;
-}
-
-input {
-	width: 50%;
+	background-image: url('../images/squared_metal.png');
 }
 
 span { /*for username display*/
 	font-weight: bold;
 }
 
-h1 {
+div {
 	font-family: calibri, sans-serif;
 }
 
-p {
-	font-family: calibri, sans-serif;
+input {
+	border: 2px solid grey;
+	border-radius: 7px;
+	width: 50%;
+	padding: 5px 5px 5px 5px;
 }
 
-#logo {
-	width: 30%;
+li {
+	padding-left: 1em;
+	text-indent: -1em;
+	line-height: 1.5em;
+}
+
+.prompt {
+	background-color: #b2b2b2;
+	width: 100%;
+	margin: 2px;
+	border-radius: 5px;
+}
+
+input {
+	width: 95%;
+	border: 0px solid white;
 }
 
 .chatwindow {
@@ -37,23 +50,42 @@ p {
 	font-family: calibri, serif;
 }
 
-input {
-	border: 2px solid grey;
-	border-radius: 7px;
-	width: 50%;
-	padding: 5px 5px 5px 5px;
-}
-
 .footer {
 	margin-top: 20px;
 }
 
-.matches { /* the table */
+.matches { /* the match table */
 	width: 90%;
 	margin: 0 auto;
 	table-layout: fixed;
-	background-color: white;
+	border-spacing: 1.5em;
+}
+.matches td {
+	padding: 1.5%;
+	vertical-align: top;
+	border: 4px solid #3780cf;
+	background-color: #68a4e7;
+}
 
+.aboutTable {
+	width: 80%;
+	margin: 0 auto;
+	table-layout: fixed;
+	border-spacing: 3em;
+}
+
+.aboutTable td {
+	padding: 1%;
+	vertical-align: top;
+	border: 4px solid #3780cf;
+	background-color: #68a4e7;
+}
+
+.email {
+	font-family: Courier, sans-serif;
+	text-align: left;
+	padding-bottom: 10px;
+	font-weight: bold;
 }
 
 .percentage {
@@ -67,21 +99,53 @@ input {
 	font-size: .9em;
 	color: white;
 	font-family: calibri, serif;
-	border: 1px solid grey;
+	border: 1px solid white;
 	text-align: left;
-
 	
 }
+
 .snippet {
 	font-size: .9em;
-	font-family: calibri, serif;
 	width: 85%;
 	text-align: left;
-	margin-left: 15%;
+	margin-left: 10%;
 	line-height: 1.5;
+	margin-top: 5px;
+	margin-bottom: 5px;
 }
 
-.matches td {
-	padding: 2%;
-	vertical-align: top;
+.aboutus {
+	text-align: left;
+	padding: 10px;
+	font-size: .9em;
+
 }
+
+#logo {
+	width: 30%;
+	margin-top: 10px;
+}
+
+#concept {
+	width: 25%;
+}
+
+#meet {
+	width: 50%;
+	margin-top: 10px;
+	margin-bottom: 10px;
+}
+
+#diag {
+	width: 40%;
+	margin-top: 10px;
+	background-color: rgba(255,255,255,0.5);
+	
+}
+
+#face {
+	width: 60%;
+	margin-top: 15px;
+	margin-bottom: 10px;
+}
+
