--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -1,1 +1,12 @@
-../../../Frontend_Files/html/contact.html
+	<div>
+		<img src="images/matchbotlogo.png" id="logo"/>
+		<p>Fill out this form!</p>
+		<div>
+	<div class="chatwindow">
+		<table class='prompt'>
+			<tr>
+				<td width="50px"><span>You &gt;&gt;  </span></td>
+				<td><input id="userinput" name='inputtext' placeholder='Type here'/></td>
+			</tr>
+		</table>
+	</div>
