--- a/app/views/static_pages/matches.html.erb
+++ b/app/views/static_pages/matches.html.erb
@@ -1,1 +1,30 @@
-../../../Frontend_Files/html/matches.html
+	<div>
+		<img src="images/matchTitle.png" id="meet"/>
+		<div>
+			<table class="matches">
+				<tr>
+					<td>
+						<div class="email"></div>
+						<div class="bar">
+							<div class="percentage"></div>
+						</div>
+						<div class="snippet"></div>
+					</td>
+					<td>
+						<div class="email"></div>
+						<div class="bar">
+							<div class="percentage"></div>
+						</div>
+						<div class="snippet"></div>
+					</td>
+					<td>
+						<div class="email"></div>
+						<div class="bar">
+							<div class="percentage"></div>
+						</div>
+						<div class="snippet"></div>
+					</td>
+				</tr>
+			</table>
+		</div>
+    </div>
