more html changes.

--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -1,7 +1,7 @@
-	<div>
-		<img src="images/matchbotlogo.png" id="logo"/>
-		<p>Fill out this form!</p>
-		<div>
+<%= javascript_include_tag 'chatwindow.js' %>
+<%= javascript_include_tag 'contactscript.js' %>
+	
+	<p>Fill out this form!</p>
 	<div class="chatwindow">
 		<table class='prompt'>
 			<tr>
