cleaned html and match page

--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -2,8 +2,6 @@
 <%= javascript_include_tag "chatwindow.js" %>
 <%= javascript_include_tag "matcheffects.js" %>
 
-	<div>
-		<img src="images/aboutTitle.png" id="meet"/>
 			<table class="aboutTable">
 				<tr>
 					<td> <!-- Sam -->
@@ -64,7 +62,7 @@
 			</table>
 		</div>
 	<div><br><br></div>
-	<div><img src="images/concept.png" id="concept"></div>
+	<div><%= image_tag "concept.png", id: "concept"%></div>
     <h1>Research</h1>
     <div class="chatwindow"></div>
     <h1>Product Flow</h1>
