--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
 <%= yield %>
 
 <div class="footer">
-  <a href="about.html"> About </a> | <a href="contact.html"> Contact us </a> | <a href="matches.html"> Matches </a>
+  <%= link_to 'About', about_path %> | <%= link_to 'Contact', contact_path %>
 </div>
 
 
