--- a/app/assets/stylesheets/stylesheet.css
+++ b/app/assets/stylesheets/stylesheet.css
@@ -52,6 +52,7 @@ input {
 	background-color: white;
 	overflow: auto;
 	font-family: calibri, serif;
+    box-shadow: 0px 0px 10px black;
 }
 
 .footer {
