button for submitting to database

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,7 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-<%= image_tag 'matchbotlogo.png',id: 'logo' %>
+<%= image_tag 'matchbotlogo_alpha.png',id: 'logo' %>
 
 <%= yield %>
 
