--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -7,7 +7,7 @@
 	<div class="chatwindow">
 		<table class='prompt'>
 			<tr>
-				<td width="80px"><span>You &gt;</span></td>
+				<td width="80px"><span>You &gt;&gt;</span></td>
 				<td><input id="userinput" name='inputtext' placeholder='Type here'/></td>
 			</tr>
 		</table>
