--- a/app/views/users/_match.html.erb
+++ b/app/views/users/_match.html.erb
@@ -1,7 +1,8 @@
 <td>
   <div class="email"><%= match[2] %></div>
   <div class="bar">
-    <div class="percentage"><%= match[1] %></div>
+    <div class="percentage"><%= match[1]*6 %></div>
   </div>
-  <div class="snippet"><%= match[3] %></div>
+  <div class="snippet">
+  </div>
 </td>
