changed matchbot to work with glib

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,7 @@
 <!--taking the html from the match page-->
 
 <%= javascript_include_tag "matchscript.js" %>
+<%= javascript_include_tag "matcheffects.js" %>
 
 <div>
   <table class="matches">
